# Jaime

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dual.rs  lib.rs  minimizer.rs  simd_arr.rs  tests.rs  trainer.rs
src/dual/: addition.rs  division.rs  extended_arithmetic.rs  multiply.rs  substraction.rs  tests.rs
src/minimizer/: adam_minimizer.rs  asymptotic_gradient_descent_minimizer.rs  genetic_minimizer.rs
src/simd_arr/: dense_simd.rs  dense_simd_nan_protected.rs  hybrid_simd.rs  sparse_simd.rs
src/simd_arr/deprecated/: arr_sparse_simd.rs  stack_hybrid_simd.rs
src/trainer/: adam_trainer.rs  asymptotic_gradient_descent_trainer.rs  genetic_trainer.rs  gradient_descent_trainer.rs
