[package]
name = "jaime"
version = "2.3.0"
edition = '2021'
authors = ["Jaime González Fábregas <jaimegonzalezfabregas@gmail.com>"]
description = "j.a.i.m.e. is an ergonomic all purpose gradient descent engine"
readme = "README.md"
repository = "https://github.com/jaimegonzalezfabregas/Jaime"
license = "MIT"
keywords = ["ai", "statistics"]

[toolchain]
channel = "nightly"


[dependencies]
rand = "0.8.5"
rayon = "1.10.0"
indicatif = {version = "0.17.8", features = ["rayon"]}
rand_chacha = "0.3.1"